<resources>
    <string name="app_name">fuck_android</string>

    <array name="ai_tip_strs">
        <item>明天提醒我上班</item>
        <item>好的呀</item>
        <item>今天天气不错啊</item>
        <item>社会主义好</item>
    </array>

    <string name="start_record">开始录制</string>
    <string name="stop_record">停止录制</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_preview">停止预览</string>

    <string name="test_butterknife">test_butterknife</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="file_provider_authority">com.jni.org.fileProvider</string>

    <string name="color">#FF0000</string>
    <string name="back">back</string>
    <string name="color_red">#FF0000</string>
    <string name="color_green">#00FF00</string>
    <string name="color_blue">#0000FF</string>
    <string name="width">30</string>
    <string name="width_1">30</string>
    <string name="width_2">30</string>
    <string name="width_3">30</string>
    <string name="nothing">nothing</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="save_camera">save_camera</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
