<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/back" android:title="@string/back"/>
    <item android:title="@string/color">
        <menu >
            <!-- 定义一组单选菜单项 -->
            <group android:checkableBehavior="single" >
                <!-- 定义子菜单 -->
                <item android:id="@+id/red" android:title="@string/color_red"/>
                <item android:id="@+id/green" android:title="@string/color_green"/>
                <item android:id="@+id/blue" android:title="@string/color_blue"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/width">
        <menu >
            <!-- 定义子菜单 -->
            <group  android:checkableBehavior="single">
                <item android:id="@+id/width_1" android:title="@string/width_1"/>
                <item android:id="@+id/width_2" android:title="@string/width_2"/>
                <item android:id="@+id/width_3" android:title="@string/width_3"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/nothing" android:title="@string/nothing"/>
    <item android:id="@+id/clear" android:title="@string/clear"
        android:icon="@android:drawable/btn_star"/>
    <item android:id="@+id/save" android:title="@string/save"/>
    <item android:id="@+id/save_camera" android:title="@string/save_camera"/>
</menu>
